Practiced single and paired HTML tags

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru-RU">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Лабораторная работа №5</h1>
-    <p>Это моя первая HTML-страница, созданная в рамках изучения основ веб-разметки.</p>
-</body>
+    <p>
+      Это моя первая HTML-страница, созданная в рамках изучения основ
+      веб-разметки.
+    </p>
+    <hr>
+    <p>Абзац текста</p>
+    <img src="" alt="" />
+  </body>
 </html>
