Added basic HTML tags section

--- a/index.html
+++ b/index.html
@@ -11,8 +11,27 @@
       Это моя первая HTML-страница, созданная в рамках изучения основ
       веб-разметки.
     </p>
+    <h2>Базовые HTML-теги</h2>
+    <p>HTML позволяет <strong>выделять</strong> текст и делать <em>акценты</em>.</p>
+    <hr />
+    <p><a href = "https://github.com/shcmal-chel/Shmal_ISRPO_2_Lab5">Мой GitHub</a></p>
+    <p><img src = "img/gitPushLab5_FIO.png" alt="Пример изображения" /></p>
     <hr>
-    <p>Абзац текста</p>
-    <img src="" alt="" />
+    <h3>1.Теги заголовков:</h3>
+    <h6>Заголовок уровня 6</h6>
+    <h5>Заголовок уровня 5</h5>
+    <h4>Заголовок уровня 4</h4>
+    <h3>Заголовок уровня 3</h3>
+    <h2>Заголовок уровня 2</h2>
+    <h1>Заголовок уровня 1</h1>
+    <hr>
+    <h3>2-7.Теги абзаца</h3>
+    <p>Это обычный абзац текста.</p>
+    <p>Это <strong>очень важная</strong> фраза.</p>
+    <p>Это <em>курсивный</em> текст.</p>
+    <p>Линия 1<br>Линия 2</p>
+    <p><a href="https://google.com">Перейти на Google</a></p>
+    <p><img src="ex.png" alt="Картинка не загрузилась" /></p>
+    <hr>
   </body>
 </html>
