--- a/index.html
+++ b/index.html
@@ -17,6 +17,26 @@
     <p><a href = "https://github.com/shcmal-chel/Shmal_ISRPO_2_Lab5">Мой GitHub</a></p>
     <p><img src = "img/gitPushLab5_FIO.png" alt="Пример изображения" /></p>
     <hr>
+    <h2>Мои списки</h2>
+    <ol>
+        <li>Звонок</li>
+        <li>Кухня</li>
+        <li>Трансформеры</li>
+        <li>Список Шиндлера</li>
+    </ol>
+    <ul>
+        <li>Курить бамбук</li>
+        <li>Бегать по лестнице</li>
+    </ul>
+    <ul>
+        <li>Пункт 1
+            <ol>
+                <li>Вложенный 1</li>
+                <li>Вложенный 2</li>
+            </ol>
+        </li>
+    </ul>
+    <hr>
     <h3>1.Теги заголовков:</h3>
     <h6>Заголовок уровня 6</h6>
     <h5>Заголовок уровня 5</h5>
@@ -33,5 +53,24 @@
     <p><a href="https://google.com">Перейти на Google</a></p>
     <p><img src="ex.png" alt="Картинка не загрузилась" /></p>
     <hr>
+    <ol>
+        <li>Первый пункт</li>
+        <li>Второй пункт</li>
+        <li>Третий пункт</li>
+    </ol>
+    <hr>
+    <ul>
+        <li>Элемент списка</li>
+        <li>Еще один элемент</li>
+    </ul>
+    <hr>
+    <ul>
+        <li>Пункт 1
+            <ol>
+                <li>Вложенный 1</li>
+                <li>Вложенный 2</li>
+            </ol>
+        </li>
+    </ul>
   </body>
 </html>
