--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
     </p>
     <p><input type="text" placeholder="Введите имя" /></p>
     <h2>Атрибуты HTML</h2>
-    <button title="Нажми на меня">Кнопка</button>
+    <p id="main-text" class="highlighed" title="Это всплывающая подсказка">Этот абзац содержит id, class и title.</p>
+    <p><a href="https://example.com" target="_blank" title="Откроется в новой вкладке">Кликни меня</a>
+    <p><img src="https://placehold.co/150" alt="Пример изображения" width="150"/>
+      <button title="Нажми на меня">Кнопка</button>
+      <p><input type="text" placeholder="Введите ваш город"></p>
   </body>
 </html>
