Added image gallery and gallery screenshot

--- a/index.html
+++ b/index.html
@@ -122,5 +122,9 @@
     <p><img src="https://placehold.co/150" alt="Пример изображения" width="150"/>
       <button title="Нажми на меня">Кнопка</button>
       <p><input type="text" placeholder="Введите ваш город"></p>
+      <h2>Галерея</h2>
+      <p><img src ="https://i.pinimg.com/originals/7d/be/d9/7dbed90655c6d7de0f4d01eb01b9cbe1.jpg?nii=t" alt ="Интернет-ссылка" ></p>
+      <p><img src ="/img/readmePushLab5_FIO.png" alt ="Локальный файл" ></p>
+      <p><img src ="#" alt ="Заглушка" ></p>
   </body>
 </html>
