--- a/index.html
+++ b/index.html
@@ -126,5 +126,34 @@
       <p><img src ="https://i.pinimg.com/originals/7d/be/d9/7dbed90655c6d7de0f4d01eb01b9cbe1.jpg?nii=t" alt ="Интернет-ссылка" ></p>
       <p><img src ="/img/readmePushLab5_FIO.png" alt ="Локальный файл" ></p>
       <p><img src ="#" alt ="Заглушка" ></p>
+      <table border="1">
+        <tr>
+          <th>Имя</th>
+          <th>Возраст</th>
+        </tr>
+        <tr>
+          <td>Алексей</td>
+          <td>21</td>
+        </tr>
+        <tr>
+          <td>Мария</td>
+          <td>19</td>
+        </tr>
+      </table>
+      <h2>Информация обо мне</h2>
+      <table border="2">
+        <tr>
+          <th>ФИО</th>
+          <th>Группа</th>
+          <th>Любимый язык программирования</th>
+          <th>Город</th>
+        </tr>
+        <tr>
+          <td>Шмаль Иван Максимович</td>
+          <td>ИСП-232</td>
+          <td>Rust</td>
+          <td>Волжский</td>
+        </tr>
+      </table>
   </body>
 </html>
